fix: content scrollbar scrolling window title

--- a/packages/frontend/src/app/modules/ui/components/page/page.component.scss
+++ b/packages/frontend/src/app/modules/ui/components/page/page.component.scss
@@ -2,4 +2,5 @@
   padding: 5rem;
   background-color: white;
   width: 100%;
+  overflow: auto;
 }
